[gd_scene load_steps=5 format=3 uid="uid://b4controller"]

[ext_resource type="Script" path="res://tests/TestControllerSystem.gd" id="1_test"]
[ext_resource type="PackedScene" path="res://characters/PlayerCharacter.tscn" id="2_player"]
[ext_resource type="PackedScene" path="res://arena/HexArena.tscn" id="3_arena"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.5, 0.5, 0.6, 1)
ambient_light_source = 2
ambient_light_color = Color(0.7, 0.7, 0.8, 1)
ambient_light_energy = 0.5

[node name="TestControllerSystem" type="Node"]
script = ExtResource("1_test")

[node name="HexArena" parent="." instance=ExtResource("3_arena")]

[node name="Player" parent="." instance=ExtResource("2_player")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.7, -0.3, 0.65, 0, 0.9, 0.44, -0.72, -0.31, 0.63, 8, 10, 8)
fov = 60.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.7, -0.5, 0.5, 0, 0.7, 0.7, -0.7, -0.5, 0.5, 0, 10, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="InfoPanel" type="Panel" parent="UI"]
modulate = Color(1, 1, 1, 0.8)
layout_mode = 0
anchor_right = 0.3
anchor_bottom = 0.4

[node name="VBoxContainer" type="VBoxContainer" parent="UI/InfoPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Controller System Test"

[node name="HSeparator" type="HSeparator" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Press F1 for keyboard, F2-F5 for controllers"

[node name="HSeparator2" type="HSeparator" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Player 1: Not assigned"

[node name="HSeparator3" type="HSeparator" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2

[node name="InputLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Movement: (0.00, 0.00)
Camera: (0.00, 0.00)
Jump: Released | Skill: Released"

[node name="HSeparator4" type="HSeparator" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2

[node name="ControllerLabel" type="Label" parent="UI/InfoPanel/VBoxContainer"]
layout_mode = 2
text = "Connected Controllers: 0"

[node name="Instructions" type="Label" parent="UI"]
layout_mode = 0
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_bottom = 150.0
text = "Controls:
M: Toggle single/multi player mode
F1: Assign keyboard to Player 1 (multi-player only)
F2-F5: Assign controller 0-3 to Player 1 (multi-player only)
P: Print controller assignments

Movement: WASD/Left stick
Camera: Right stick
Jump: Shift/B button
Skill: Space/A button"
